fix Focus indicator is not visible on the button

--- a/assets/admin_themes/Sea_Green/layout/body.scss
+++ b/assets/admin_themes/Sea_Green/layout/body.scss
@@ -6,3 +6,9 @@ body {
     min-height       : 100vh;
     flex-direction   : column;
 }
+
+
+.modal-header .btn-close:focus {
+    outline:2px solid currentColor;
+    outline-offset:2px;
+}
